...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/albumUserIdLabel"
            app:layout_constraintEnd_toStartOf="@id/albumIntermediary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Album ID: 1" />

        <TextView
            android:id="@+id/albumUserIdLabel"
            style="@style/Theme.Demo.Default.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/albumNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="User ID: 1" />

        <TextView
            android:id="@+id/albumNameLabel"
            style="@style/Theme.Demo.Default.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
